// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TitleWrapper/> render() should render default 1`] = `
<span
  class="container"
>
  <img
    alt="HTTP"
    class="container"
    src="test-file-stub"
  />
  HTTP
</span>
`;

exports[`<TitleWrapper/> render() should render inline 1`] = `
<span
  class="container"
>
  <img
    alt="HTTP"
    class="container"
    src="test-file-stub"
  />
  HTTP
</span>
`;

exports[`<TitleWrapper/> render() should render with a color tile 1`] = `
<span
  class="container"
>
  <div
    class="colorTile"
    style="background-color: rgb(17, 34, 51);"
  />
  HTTP
</span>
`;

exports[`<TitleWrapper/> render() should render with a custom picture 1`] = `
<span
  class="container"
>
  <img
    alt="Widget Icon"
    class="container"
    src="http://mypictureurl.com"
    style="background-color: rgb(17, 34, 51);"
  />
  HTTP
</span>
`;

exports[`<TitleWrapper/> render() should render with a link 1`] = `
<span
  class="container"
>
  <img
    alt="HTTP"
    class="container"
    src="test-file-stub"
  />
  <a
    href="https://foo.bar/?baz=BAZ"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span>
      Foo
    </span>
  </a>
</span>
`;
